@@ -1,4 +1,6 @@
 1.0.1
+Fixed unloading terminal plug.
+Added opening new terminals in tabs.
 Added multiple terminals.
 Now saves size, position, floating and viibility of Terminal Plug.
 Added save current state to terminal plug settings.
